// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`channels does not render chat if chat is available 1`] = `
<div>
  <div
    class="messageBubble container"
  >
    <div
      class="header firstItem title"
    >
      Would you like to leave a message so the team can follow up on your question?
    </div>
    <div
      class=" lastItem optionItem"
    >
      <div
        class="channel singleChannel"
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-contactForm"
          data-testid="Icon--channelChoice-contactForm"
          type="Icon--channelChoice-contactForm"
        >
          <svgr-mock
            aria-hidden="true"
            iconfilename="widget-icon_channelChoice-contactForm.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Leave a message
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`channels renders expected components if chat and chat offline are available 1`] = `
<div>
  <div
    class="messageBubble container"
  >
    <div
      class="header firstItem title"
    >
      blah
    </div>
    <div
      class=" lastItem optionItem"
    >
      <div
        class="channel singleChannel"
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-chat"
          data-testid="Icon--channelChoice-chat"
          type="Icon--channelChoice-chat"
        >
          <svgr-mock
            aria-hidden="true"
            iconfilename="widget-icon_channelChoice-chat.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Live chat is offline
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`channels renders expected components if only call us is available 1`] = `
<div>
  <div
    class="messageBubble container"
  >
    <div
      class="header firstItem title"
    >
      blah
    </div>
    <div
      class=" lastItem optionItem"
    >
      <div
        class="channel singleChannel"
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-talk"
          data-testid="Icon--channelChoice-talk"
          type="Icon--channelChoice-talk"
        >
          <svgr-mock
            aria-hidden="true"
            iconfilename="widget-icon_channelChoice-talk.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Call us
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`channels renders expected components if only chat is available 1`] = `
<div>
  <div
    class="messageBubble container"
  >
    <div
      class="header firstItem title"
    >
      blah
    </div>
    <div
      class=" lastItem optionItem"
    >
      <div
        class="channel singleChannel"
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-chat"
          data-testid="Icon--channelChoice-chat"
          type="Icon--channelChoice-chat"
        >
          <svgr-mock
            aria-hidden="true"
            iconfilename="widget-icon_channelChoice-chat.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Live chat
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`channels renders expected components if only submit ticket is available 1`] = `
<div>
  <div
    class="messageBubble container"
  >
    <div
      class="header firstItem title"
    >
      blah
    </div>
    <div
      class=" lastItem optionItem"
    >
      <div
        class="channel singleChannel"
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-contactForm"
          data-testid="Icon--channelChoice-contactForm"
          type="Icon--channelChoice-contactForm"
        >
          <svgr-mock
            aria-hidden="true"
            iconfilename="widget-icon_channelChoice-contactForm.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Leave a message
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`channels renders expected components if talk and request callback are available 1`] = `
<div>
  <div
    class="messageBubble container"
  >
    <div
      class="header firstItem title"
    >
      blah
    </div>
    <div
      class=" lastItem optionItem"
    >
      <div
        class="channel singleChannel"
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-talk"
          data-testid="Icon--channelChoice-talk"
          type="Icon--channelChoice-talk"
        >
          <svgr-mock
            aria-hidden="true"
            iconfilename="widget-icon_channelChoice-talk.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Request a callback
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`channels renders generic leading message if more than 1 channel is available 1`] = `
<div>
  <div
    class="messageBubble container"
  >
    <div
      class="header firstItem title"
    >
      Choose a way to get in touch:
    </div>
    <div
      class=" optionItem"
    >
      <div
        class="channel "
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-chat"
          data-testid="Icon--channelChoice-chat"
          type="Icon--channelChoice-chat"
        >
          <svgr-mock
            aria-hidden="true"
            iconfilename="widget-icon_channelChoice-chat.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Live chat
        </div>
      </div>
    </div>
    <div
      class=" lastItem optionItem"
    >
      <div
        class="channel "
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-talk"
          data-testid="Icon--channelChoice-talk"
          type="Icon--channelChoice-talk"
        >
          <svgr-mock
            aria-hidden="true"
            iconfilename="widget-icon_channelChoice-talk.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Call us
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`channels renders leading message if more than 1 channel is available and useLeadingMessageAsFallback is true 1`] = `
<div>
  <div
    class="messageBubble container"
  >
    <div
      class="header firstItem title"
    >
      hi
    </div>
    <div
      class=" optionItem"
    >
      <div
        class="channel "
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-chat"
          data-testid="Icon--channelChoice-chat"
          type="Icon--channelChoice-chat"
        >
          <svgr-mock
            aria-hidden="true"
            iconfilename="widget-icon_channelChoice-chat.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Live chat
        </div>
      </div>
    </div>
    <div
      class=" lastItem optionItem"
    >
      <div
        class="channel "
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-talk"
          data-testid="Icon--channelChoice-talk"
          type="Icon--channelChoice-talk"
        >
          <svgr-mock
            aria-hidden="true"
            iconfilename="widget-icon_channelChoice-talk.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Call us
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`channels renders the passed in leading message regardless of other properties 1`] = `
<div>
  <div
    class="messageBubble container"
  >
    <div
      class="header firstItem title"
    >
      blah blah
    </div>
    <div
      class=" lastItem optionItem"
    >
      <div
        class="channel singleChannel"
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-contactForm"
          data-testid="Icon--channelChoice-contactForm"
          type="Icon--channelChoice-contactForm"
        >
          <svgr-mock
            aria-hidden="true"
            iconfilename="widget-icon_channelChoice-contactForm.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Leave a message
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the expected classes 1`] = `
<div>
  <div
    class="messageBubble container"
  >
    <div
      class="header firstItem title"
    >
      Choose a way to get in touch:
    </div>
    <div
      class=" optionItem"
    >
      <div
        class="channel "
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-chat"
          data-testid="Icon--channelChoice-chat"
          type="Icon--channelChoice-chat"
        >
          <svgr-mock
            aria-hidden="true"
            iconfilename="widget-icon_channelChoice-chat.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Live chat
        </div>
      </div>
    </div>
    <div
      class=" optionItem"
    >
      <div
        class="channel "
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-talk"
          data-testid="Icon--channelChoice-talk"
          type="Icon--channelChoice-talk"
        >
          <svgr-mock
            aria-hidden="true"
            iconfilename="widget-icon_channelChoice-talk.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Request a callback
        </div>
      </div>
    </div>
    <div
      class=" lastItem optionItem"
    >
      <div
        class="channel "
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-contactForm"
          data-testid="Icon--channelChoice-contactForm"
          type="Icon--channelChoice-contactForm"
        >
          <svgr-mock
            aria-hidden="true"
            iconfilename="widget-icon_channelChoice-contactForm.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Leave a message
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the leading message 1`] = `
<div>
  <div
    class="messageBubble container"
  >
    <div
      class="header firstItem title"
    >
      hello world
    </div>
    <div
      class=" optionItem"
    >
      <div
        class="channel "
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-chat"
          data-testid="Icon--channelChoice-chat"
          type="Icon--channelChoice-chat"
        >
          <svgr-mock
            aria-hidden="true"
            iconfilename="widget-icon_channelChoice-chat.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Live chat
        </div>
      </div>
    </div>
    <div
      class=" optionItem"
    >
      <div
        class="channel "
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-talk"
          data-testid="Icon--channelChoice-talk"
          type="Icon--channelChoice-talk"
        >
          <svgr-mock
            aria-hidden="true"
            iconfilename="widget-icon_channelChoice-talk.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Request a callback
        </div>
      </div>
    </div>
    <div
      class=" lastItem optionItem"
    >
      <div
        class="channel "
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-contactForm"
          data-testid="Icon--channelChoice-contactForm"
          type="Icon--channelChoice-contactForm"
        >
          <svgr-mock
            aria-hidden="true"
            iconfilename="widget-icon_channelChoice-contactForm.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Leave a message
        </div>
      </div>
    </div>
  </div>
</div>
`;
